--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 # Arquivo com a chave de criptografia do Rails para descriptografar
 # o arquivo credentials.yml.enc
 /config/master.key
+k8s/secret.yaml
